--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,17 @@
-#root {
+
+#root{
   max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
+  padding: none;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #d3dfeb; 
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
+
 
 .logo {
   height: 6em;
